@@ -12,7 +12,7 @@ import java.util.logging.Logger;
 public class MMORPG {
 
     // DISABLE WHEN PUBLIC BUILD
-    public static boolean RUN_DEV_TOOLS = false;
+    public static boolean RUN_DEV_TOOLS = true;
 
     public static boolean RUN_MIXIN_LOGS() {
         return false;
