@@ -13,6 +13,7 @@ import com.robertx22.age_of_exile.mmorpg.registers.common.ConfigRegister;
 import com.robertx22.age_of_exile.mmorpg.registers.common.MobAttributes;
 import com.robertx22.age_of_exile.mmorpg.registers.common.PotionRegister;
 import com.robertx22.age_of_exile.mmorpg.registers.common.items.BaseGearTypeItemRegister;
+import com.robertx22.age_of_exile.mmorpg.registers.common.items.SkillGemRegistrator;
 import com.robertx22.age_of_exile.mmorpg.registers.common.items.UniqueGearItemRegister;
 import com.robertx22.age_of_exile.mobs.mob_stats.SpecialMobStats;
 import me.sargunvohra.mcmods.autoconfig1u.AutoConfig;
@@ -35,6 +36,7 @@ public class CommonInit implements ModInitializer {
         SlashRegistry.registerAllItems(); // after config registerAll
         SlashRegistry.checkGuidValidity();
 
+        SkillGemRegistrator.INSTANCE = new SkillGemRegistrator();
         ModRegistry.GEAR_ITEMS = new BaseGearTypeItemRegister();
 
         BaseAreas.INSTANCE = new BaseAreas();
