@@ -1,21 +1,29 @@
 package com.robertx22.age_of_exile.vanilla_mc.items.misc;
 
+import com.robertx22.age_of_exile.database.base.CreativeTabs;
+import com.robertx22.age_of_exile.database.data.spells.spell_classes.bases.BaseSpell;
 import com.robertx22.age_of_exile.datapacks.models.IAutoModel;
 import com.robertx22.age_of_exile.datapacks.models.ItemModelManager;
+import com.robertx22.age_of_exile.datapacks.models.ModelHelper;
 import com.robertx22.age_of_exile.uncommon.interfaces.IAutoLocName;
+import com.robertx22.age_of_exile.uncommon.localization.CLOC;
 import net.minecraft.item.Item;
 import net.minecraft.util.registry.Registry;
 
 public class SkillGemItem extends Item implements IAutoModel, IAutoLocName {
 
-    public SkillGemItem() {
+    public BaseSpell spell;
+
+    public SkillGemItem(BaseSpell spell) {
         super(new Item.Settings().maxCount(1)
+            .group(CreativeTabs.MyModTab)
             .maxDamage(0));
+        this.spell = spell;
     }
 
     @Override
     public void generateModel(ItemModelManager manager) {
-        manager.generated(this);
+        new ModelHelper(this, ModelHelper.Type.GENERATED).generate();
     }
 
     @Override
@@ -31,7 +39,7 @@ public class SkillGemItem extends Item implements IAutoModel, IAutoLocName {
 
     @Override
     public String locNameForLangFile() {
-        return "Skill Gem";
+        return CLOC.translate(spell.getLocName());
     }
 
     @Override
